# cimp_lenz

./: .env.example  .gitignore  PROJECT_PLAN.md  README.md  pyproject.toml
config/: canonical_mappings.json  entity_types.json
data/evaluation/: gold_seed.example.jsonl
dataset/: dataset_v1_report.md  gold_seed_10.jsonl
dataset/data/: gold_seed_6.jsonl  gold_seed_clean.jsonl  gold_seed_coverage_challenge.jsonl
dataset/data/annotations/: predictions_clean.jsonl
dataset/data/evaluation/: baseline_clean_errors.jsonl  baseline_clean_metrics.json
dataset/data/mapping/: gold_mapped.jsonl  gold_mapping_summary.json  gold_unresolved.jsonl
dataset/data/mapping_challenge/: gold_mapped.jsonl  gold_mapping_summary.json  gold_unresolved.jsonl
dataset/data/mapping_clean/: gold_mapped.jsonl  gold_mapping_summary.json  gold_unresolved.jsonl
reports/: phase0_gold_schema_kg_alignment.md  phase1_rule_based_extraction_baseline.md  phase2_upload_review_ui.md
src/cmip_indexkg/: __init__.py  config.py
src/cmip_indexkg/cli/: main.py
src/cmip_indexkg/evaluation/: __init__.py  baseline_metrics.py  gold_mapping.py  gold_schema.py
src/cmip_indexkg/extraction/: __init__.py  aliases.py  baseline.py  normalization.py
src/cmip_indexkg/ingestion/: __init__.py  document_model.py  pdf_parser.py
src/cmip_indexkg/kg/: __init__.py  neo4j_client.py  vocabulary_export.py
src/cmip_indexkg/ui/: __init__.py  review_service.py  streamlit_app.py
tests/: test_aliases.py  test_gold_mapping.py  test_gold_schema.py  test_phase1_baseline.py  test_phase2_review_service.py
(+6 files in other folders)
