[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cmip-indexkg"
version = "0.1.0"
description = "KG-grounded indexing utilities for CMIP publications."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "neo4j>=5.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
cmip-lens = "cmip_indexkg.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
